Se agrego formulario a Libro y se agrego exportar en Word

--- a/segundoBlazor/Client/wwwroot/index.html
+++ b/segundoBlazor/Client/wwwroot/index.html
@@ -32,6 +32,10 @@
             }
         }
 
+        function obtenerArchivo(idInput) {
+            return document.getElementById(idInput).src;
+        }
+
 
     </script>
     <div id="blazor-error-ui">
